- Fixed bug where XML Actions and groovy script locations were not being
  cleaned before using as class names for groovy compiled classes
- Fixed Entity Audit Log bug where fields not set were considered null and
  therefore were considered changed to null and logged as such
- Fixed NPE when calling update() on an EntityValueImpl with no changes

===========================================================================
Release 1.0.1 - 31 December 2011
===========================================================================

Version 1.0.1 is primarily a maintenance and bug fix release. The few new
features are mostly extensions to existing features for improved
flexibility, to round out functionality, and better support standards.

This release includes:

- All the great features of the 1.0.0 and previous releases
- Updated Gradle build file for version 1.0-milestone-6 (previously ran on
  1.0-milestone-3)
- Added support to automatically clear caches for view-entity based in
  updates to member-entity records, as long as all member-entity PK fields
  are directly or indirectly aliased on the view-entity
- Improved entity-auto service error handling
- Changed login screen to render in the same request instead of a redirect
  and to return a status code of 401 (related to bug #3442045)
- Made form field sub-fields more flexible, can include any widget tag
  under them now; this has been tested with render-mode and should work
  with others as they just run the corresponding macro for the widget
  element, but your mileage may vary
- Added support for a classes directory under the runtime directory, and
  under each component directory to go along with the lib directories so
  that classpath resources do not have to be in a jar file
- Added support for JSR-223 (javax.script) compatible scripting languages
  through configuration only (in moqui-conf file) so no ScriptRunner
  interface implementation is needed for these